--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -67,7 +67,7 @@
                 <span class="oi oi-question-mark" aria-hidden="true"></span> About
             </NavLink>
         </div>
-        <div class="nav-item px-3">
+        <div class="nav-item px-3" style="visibility:@(subActive > 0 ? "hidden" : "visible")">
             <NavLink class="nav-link" href="premium">
                 <span class="oi oi-grid-two-up" aria-hidden="true"></span> Premium
             </NavLink>
@@ -90,7 +90,7 @@
     {
         collapseNavMenu = !collapseNavMenu;
     }
-
+    
     private void ToggleUserMenu()
     {
         collapseUserMenu = !collapseUserMenu;
