--- a/Pages/User/Questions/Courses.razor
+++ b/Pages/User/Questions/Courses.razor
@@ -10,23 +10,35 @@
     <h1>Courses</h1>
 
     <div class="row gx-5">
-        @foreach (Course item in CoursesList)
+        @if (!CoursesList.Any())
         {
-            <div class="col-lg-4 mb-5">
-                <div class="card h-100 shadow border-0">
-                    <img class="card-img-top" src="@item.ImageURL" alt="..." />
-                    <div class="card-body p-4">
-                        <a class="text-decoration-none link-dark stretched-link" href="@($"/topics/{item.CourseRef}")">
-                            <h5 class="card-title mb-3">
-                                @item.Title
-                            </h5>
-                        </a>
-                        <p class="card-text mb-0">
-                            @item.Description
-                        </p>
-                    </div>
+            <div class="text-center">
+                <div class="spinner-border" style="width: 3rem; height: 3rem;" role="status">
+                    <span class="visually-hidden">Loading...</span>
                 </div>
             </div>
+            <span class="visible">Loading available courses, please wait a bit...</span>
+        }
+        else
+        {
+            @foreach (Course item in CoursesList)
+            {
+                <div class="col-lg-4 mb-5">
+                    <div class="card h-100 shadow border-0">
+                        <img class="card-img-top" src="@item.ImageURL" alt="..." />
+                        <div class="card-body p-4">
+                            <a class="text-decoration-none link-dark stretched-link" href="@($"/topics/{item.CourseRef}")">
+                                <h5 class="card-title mb-3">
+                                    @item.Title
+                                </h5>
+                            </a>
+                            <p class="card-text mb-0">
+                                @item.Description
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            }
         }
     </div>
 </div>
