added beta alert

--- a/Pages/User/Home/Index.razor
+++ b/Pages/User/Home/Index.razor
@@ -4,6 +4,9 @@
 @inject IApiRepository repository
 
 <!-- Header-->
+<div class="alert alert-primary" role="alert">
+    Beta Version: Any feature suggestions or complaints, <a href="https://wa.me/263718086035">WhatsApp us</a>
+</div>
 <header class="bg-white py-5">
     <div class="container px-5">
         <div class="row gx-5 align-items-center justify-content-center">
