added emojies, refactored code

--- a/Pages/User/Articles.razor
+++ b/Pages/User/Articles.razor
@@ -9,7 +9,7 @@
                 <div class="my-5 text-center text-xl-start">
                     <h1 class="display-5 fw-bolder text-dark mb-2"
                         style="font-size:4.75rem">
-                        Articles
+                        Articles🥸
                     </h1>
                     <p class="lead fw-normal text-black-50 mb-4">
                         Welcome to our Articles.
