--- a/Pages/User/Courses.razor
+++ b/Pages/User/Courses.razor
@@ -7,7 +7,7 @@
 
 <div class="container">
 
-    <h1>Courses</h1>
+    <h1>Courses😙</h1>
 
     <div class="row gx-5">
         @if (!CoursesList.Any())
@@ -17,7 +17,7 @@
                     <span class="visually-hidden">Loading...</span>
                 </div>
             </div>
-            <span class="visible">Loading available courses, please wait a bit...</span>
+            <span class="visible">Loading available courses, please wait a bit...🥲</span>
         }
         else
         {
