--- a/Pages/User/Index.razor
+++ b/Pages/User/Index.razor
@@ -6,17 +6,18 @@
 <!-- Header-->
 <div class="alert alert-primary" role="alert">
     Beta Version: Any feature suggestions or complaints, <a href="https://wa.me/263718086035">WhatsApp us</a>
+    PS: Try to break stuff😅
 </div>
 <header class="bg-white py-5">
     <div class="container px-5">
         <div class="row gx-5 align-items-center justify-content-center">
             <div class="col-lg-8 col-xl-7 col-xxl-6">
                 <div class="my-5 text-center text-xl-start">
-                    <h1 class="display-5 fw-bolder text-dark mb-2">medbase</h1>
+                    <h1 class="display-5 fw-bolder text-dark mb-2">medbase😃</h1>
                     <p class="lead fw-normal text-dark-50 mb-4">Over 1,200 MCQs (with answers) on Anatomy, Physiology & Pathology</p>
                     <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start">
-                        <a class="btn btn-primary btn-lg px-4 me-sm-3" href="/courses">Get Started</a>
-                        <a class="btn btn-outline-dark btn-lg px-4" href="/about">Learn More</a>
+                        <a class="btn btn-primary btn-lg px-4 me-sm-3" href="/courses">Get Started👉</a>
+                        <a class="btn btn-outline-dark btn-lg px-4" href="/about">Learn More📖</a>
                     </div>
                 </div>
             </div>
@@ -30,12 +31,12 @@
 <div class="container my-5">
     <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
         <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
-            <h1 class="display-4 fw-bold lh-1">Medbase Mobile Application</h1>
+            <h1 class="display-4 fw-bold lh-1">Medbase Mobile Application📱</h1>
             <p class="lead">
                 Get your MCQs offline, create quizzes & much more. Everything is better in the app.
             </p>
             <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
-                <a href="#"><img src="img/google_play_badge.png" alt="" style="max-width:300px" /></a>
+                <a href="https://play.google.com/store/apps/details?id=com.tanakamawere.medbaseapplication"><img src="img/google_play_badge.png" alt="" style="max-width:300px" /></a>
             </div>
         </div>
         <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
