--- a/Pages/User/About.razor
+++ b/Pages/User/About.razor
@@ -8,7 +8,7 @@
             <div class="col-lg-6 col-xl-6 col-xxl-4">
                 <div class="my-5 text-center text-xl-start">
                     <h1 class="display-5 fw-bolder text-dark mb-2">
-                        About Medbase
+                        About Medbase😍
                     </h1>
                     <p class="lead fw-normal text-muted mb-0">
                         Medbase is built around the best learning practises of spaced repetition and
@@ -31,14 +31,14 @@
     <div class="container px-5">
         <div class="text-center mb-5">
             <i class="bi bi-envelope text-dark"></i>
-            <h1 class="fw-bolder">Get in touch</h1>
+            <h1 class="fw-bolder">Get in touch📞</h1>
             <p class="lead fw-normal text-muted mb-0">I'd love to hear from you</p>
         </div>
 
         <!-- Contact cards-->
         <div class="row gx-5 row-cols-2 py-5 text-center">
             <div class="col text-center">
-                <i class="bi bi-whatsapp text-dark"></i>
+                <i class="bi bi-whatsapp text-dark">🗨️</i>
                 <div class="h5 mb-2">Chat with me</div>
                 <p class="text-muted mb-0">
                     If WhatsApp is your preferred channel of communication,
@@ -48,7 +48,7 @@
                 </p>
             </div>
             <div class="col text-center">
-                <i class="bi bi-envelope text-dark"></i>
+                <i class="bi bi-envelope text-dark">📧</i>
                 <div class="h5">Send me an email</div>
                 <p class="text-muted mb-0">
                     Get in touch at
@@ -65,8 +65,8 @@
     <div class="container px-5">
         <div class="text-center mb-5">
             <i class="bi bi-laptop text-dark"></i>
-            <h1 class="fw-bolder">Website Info</h1>
-            <p class="lead fw-normal text-muted mb-0">How this website was made</p>
+            <h1 class="fw-bolder">Website Info🫡</h1>
+            <p class="lead fw-normal text-muted mb-0">How this website was made🔧</p>
         </div>
 
         <p class="lead text-dark mb-1 text-center">
