added admin layout and admin subscriptions editing. Added changelog

--- a/Pages/Admin/Editors/ArticlesEditor.razor
+++ b/Pages/Admin/Editors/ArticlesEditor.razor
@@ -1,5 +1,6 @@
 ﻿@page "/admin/articles/edit/{id:int}"
 @page "/admin/articles/add"
+@layout AdminLayout
 @using MedbaseBlazor.Pages.Admin.Utilities
 @inject IApiRepository repository
 @using Markdig
