--- a/Pages/Admin/Editors/CourseEditor.razor
+++ b/Pages/Admin/Editors/CourseEditor.razor
@@ -1,5 +1,6 @@
 ﻿@page "/admin/courses/edit/{id:int}"
 @page "/admin/courses/add"
+@layout AdminLayout
 @inject IApiRepository repository
 
 <style>
