--- a/Pages/Admin/Editors/QuestionsEditor.razor
+++ b/Pages/Admin/Editors/QuestionsEditor.razor
@@ -1,6 +1,7 @@
 ﻿@page "/admin/questions/edit/{id:int}"
 @page "/admin/questions/editfromtopic/{topicId:int}"
 @page "/admin/question/add"
+@layout AdminLayout
 @inject IApiRepository repository
 @using MedbaseBlazor.Models
 @using MedbaseBlazor.Pages.Admin.Utilities
