--- a/Pages/User/Topics.razor
+++ b/Pages/User/Topics.razor
@@ -6,12 +6,12 @@
 <PageTitle>Topics</PageTitle>
 
 
-<div class="container px-5 mt-5">
+<div class="container mt-1">
     <div class="row gx-5 align-items-center justify-content-center">
         <div class="text-center text-xl-start">
             <h1 class="display-5 fw-bolder text-dark mb-2">Choose Topic😗</h1>
         </div>
-        <div class="row gx-5">
+        <div class="row">
             @if (!TopicsList.Any())
             {
                 <div class="text-center">
