--- a/Pages/Admin/Utilities/QuestionsDetails.razor
+++ b/Pages/Admin/Utilities/QuestionsDetails.razor
@@ -1,4 +1,5 @@
 ﻿@page "/admin/questions/details/{id:int}"
+@layout AdminLayout
 @inject IApiRepository repository
 
 <table class="table table-bordered table-striped table-sm">
