--- a/Pages/User/About.razor
+++ b/Pages/User/About.razor
@@ -15,6 +15,9 @@
                         active recall. All the questions are available for ease of access to medical students, pharmacy students and everyone in the
                         health sciences field.
                     </p>
+                    <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start">
+                        <a class="btn btn-primary btn-lg px-4 me-sm-3" href="/changelog">Change Log🚼</a>
+                    </div>
                 </div>
             </div>
             <div class="col-xl-6 col-xxl-6 text-center">
