--- a/Pages/User/Questions.razor
+++ b/Pages/User/Questions.razor
@@ -16,7 +16,7 @@
 }
 else
 {
-    <div class="container text-center">
+    <div class="container text-center mb-3">
         <div class="row">
             <div class="col">
                 <button @onclick="() => GetQuestions(QuestionPaged.CurrentPage -1)" class="btn btn-outline-primary @(!(QuestionPaged.CurrentPage > 1) ? "disabled" : "")">
@@ -128,9 +128,6 @@ else
                 </div>
             </div>
             <div class="justify-content-sm-center justify-content-xl-start text-center m-2">
-                <a class="btn btn-primary px-4" href="/courses">
-                    <span class="oi oi-share" aria-hidden="true"></span>
-                </a>
                 <button class="btn btn-outline-dark px-4" @onclick="() => ShowAnswers(question.Id)">
                     <span class="oi oi-envelope-open" aria-hidden="true"></span>
                 </button>
