removed premium and uploaded to somee

--- a/Pages/User/ChangeLog.razor
+++ b/Pages/User/ChangeLog.razor
@@ -4,11 +4,30 @@
 
 <div class="container">
     <div class="justify-content-center align-content-center">
-        <h2 class="fw-bold">Version 1.0.4</h2>
-        <h3 class="text-muted">Release Date: 14 February 2023</h3>
         <ul>
             <li>
-                Bug fixes and improvements
+                <h2 class="fw-bold">Version 1.0.4</h2>
+                <h5 class="text-muted">Release Date: 14 February 2023</h5>
+                <ul>
+                    <li>
+                        Bug fixes and improvements
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <h2 class="fw-bold">Version 1.1</h2>
+                <h5 class="text-muted">Release Date: 2 March 2023</h5>
+                <ul>
+                    <li>
+                        Changed database servers after break down of the website
+                    </li>
+                    <li>
+                        Medbase is now completely free with premium plans and offerings scrapped
+                    </li>
+                    <li>
+                        User accounts removed
+                    </li>
+                </ul>
             </li>
         </ul>
     </div>
