--- a/Pages/User/Index.razor
+++ b/Pages/User/Index.razor
@@ -5,8 +5,7 @@
 
 <!-- Header-->
 <div class="alert alert-primary" role="alert">
-    Beta Version: Any feature suggestions or complaints, <a href="https://wa.me/263718086035">WhatsApp us</a>
-    PS: Try to break stuff😅
+    Version 1.1: Medbase is now completely free with no restriction. View our <a href="/changelog">change log</a>
 </div>
 <header class="bg-white py-5">
     <div class="container px-5">
@@ -36,7 +35,7 @@
                 Get your MCQs offline, create quizzes & much more. Everything is better in the app.
             </p>
             <div class="d-grid gap-2 d-md-flex justify-content-md-start mb-4 mb-lg-3">
-                <a href="https://play.google.com/store/apps/details?id=com.tanakamawere.medbaseapplication"><img src="img/google_play_badge.png" alt="" style="max-width:300px" /></a>
+                <a href="https://play.google.com/store/apps/details?id=com.tanakamawere.medbasehybrid"><img src="img/google_play_badge.png" alt="" style="max-width:300px" /></a>
             </div>
         </div>
         <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
