changed toolbar colour and thumbnail for whatsapp

--- a/Pages/_Host.cshtml
+++ b/Pages/_Host.cshtml
@@ -16,9 +16,9 @@
     
     <!--WhatsApp Metas-->
     <meta property="og:site_name" content="Medbase | Medical School MCQs">
-    <meta property="og:title" content="Medbase - | Medical School MCQs" />
+    <meta property="og:title" content="Medbase - Medical School MCQs" />
     <meta property="og:description" content="Create quizzes, ask AI and more in Medbase" />
-    <meta property="og:image" itemprop="image" content="Blazor Thumbnail">
+    <meta property="og:image" itemprop="image" content="~/img/medbase_logo.png">
     <meta property="og:type" content="website" />
     <meta property="og:updated_time" content="1440432930" />
 
@@ -29,7 +29,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="~/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="~/favicon-16x16.png">
     <link rel="manifest" href="~/site.webmanifest">
-    <meta name="theme-color" content="#6397ff">
+    <meta name="theme-color" content="#6196f4">
 
 
     <!-- Google Tag Manager -->
