--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -3,7 +3,7 @@
 @using System.Diagnostics;
 @inject IApiRepository repository
 
-<div class="top-row ps-3 navbar navbar-dark position-sticky sticky-top">
+<div class="top-row ps-3 navbar navbar-dark position-sticky sticky-top" style="background-color:#6397ff">
     <div class="container-fluid">
         <a class="navbar-brand" href="">Medbase</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
