questions editor much more useful (could be better)

--- a/Pages/User/Index.razor
+++ b/Pages/User/Index.razor
@@ -5,7 +5,7 @@
 
 <!-- Header-->
 <div class="alert alert-primary" role="alert">
-    Version 1.1: Medbase is now completely free with no restriction. View our <a href="/changelog">change log</a>
+    New course added: Immunology and Medical Microbiology
 </div>
 <header class="bg-white py-5">
     <div class="container px-5">
