--- a/Pages/Admin/Editors/QuestionsEditor.razor
+++ b/Pages/Admin/Editors/QuestionsEditor.razor
@@ -8,7 +8,6 @@
 @using Markdig
 
 
-<button @onclick="() => ClearModel()" class="btn btn-primary m-5">Clear Form</button>
 @if (Question is null)
 {
     <p><em>Loading...</em></p>
@@ -17,49 +16,50 @@ else
 {
     <EditForm Model="Question" OnSubmit="SaveChanges">
         <DataAnnotationsValidator />
-        <div class="col-form-label">
-            <label>Topic</label>
-            <InputSelect class="form-control" @bind-Value="Question.TopicRef">
-                @foreach (Topic item in Topics)
-                {
-                    <option value="@item.TopicRef">@item.Name</option>
-                }
-            </InputSelect>
-        </div>
-        <div class="col-form-label">
-            <label>Question Main</label>
-            <InputText class="form-control" @bind-Value="Question.QuestionMain" />
+        <div class="row">
+            <div class="col-2">
+                <button @onclick="() => ClearModel()" class="btn btn-primary">Clear Form</button>
+            </div>
+            <div class="col-4">
+                <div class="col-form-label">
+                    <label>Topic</label>
+                    <InputSelect class="form-control" @bind-Value="Question.TopicRef">
+                        @foreach (Topic item in Topics)
+                        {
+                            <option value="@item.TopicRef">@item.Name</option>
+                        }
+                    </InputSelect>
+                </div>
+            </div>
+            <div class="col-6">
+                <div class="col-form-label">
+                    <label>Question Main</label>
+                    <InputText class="form-control" @bind-Value="Question.QuestionMain" />
+                </div>
+            </div>
         </div>
         <hr />
 
         <!--Child A-->
-        <div class="col-form-label">
-            <label>ChildA</label>
-            <InputText class="form-control" @bind-Value="Question.ChildA" />
-        </div>
-        <div class="col-form-label">
-            <label>AnswerA</label>
-            <InputSelect class="form-control" @bind-Value="Question.AnswerA">
-                <option value="true">True</option>
-                <option value="false">False</option>
-            </InputSelect>
-        </div>
-        <div class="col-form-label">
-            <div class="row">
-                <div class="col-6">
-                    <div class="text-center text-xl-start">
-                        <div class="col-form-label">
-                            <label>Explanation A</label>
-                            <MarkdownTextInput class="form-control" @bind-Value="Question.ExplanationA" />
-                        </div>
-                    </div>
+        <div class="row">
+            <div class="col-6">
+                <label>ChildA</label>
+                <InputText class="form-control" @bind-Value="Question.ChildA" />
+            </div>
+            <div class="col-1">
+                <div class="col-form-label">
+                    <label>AnswerA</label>
+                    <InputSelect class="form-control" @bind-Value="Question.AnswerA">
+                        <option value="true">True</option>
+                        <option value="false">False</option>
+                    </InputSelect>
                 </div>
-                <div class="col-6 text-center">
-                    <div class="my-5 text-center text-xl-start form-group">
-                        <label for="explanationAPreview">Explanation A Preview</label>
-                        <div id="explanationAPreview" style="height: 100%;" class="form-control">
-                            @((MarkupString)Markdown.ToHtml(Question.ExplanationA == null ? " " : Question.ExplanationA))
-                        </div>
+            </div>
+            <div class="col-5">
+                <div class="text-center text-xl-start">
+                    <div class="col-form-label">
+                        <label>Explanation A (As Markdown)</label>
+                        <MarkdownTextInput class="form-control" @bind-Value="Question.ExplanationA" />
                     </div>
                 </div>
             </div>
@@ -67,31 +67,25 @@ else
 
         <hr />
         <!--Child B-->
-        <div class="col-form-label">
-            <label>ChildB</label>
-            <InputText class="form-control" @bind-Value="Question.ChildB" />
-        </div>
-        <div class="col-form-label">
-            <label>AnswerB</label>
-            <InputSelect class="form-control" @bind-Value="Question.AnswerB">
-                <option value="true">True</option>
-                <option value="false">False</option>
-            </InputSelect>
-        </div>
-        <div class="col-form-label">
+        <div class="row">
             <div class="col-6">
-                <div class="text-center text-xl-start">
-                    <div class="col-form-label">
-                        <label>Explanation B</label>
-                        <MarkdownTextInput class="form-control" @bind-Value="Question.ExplanationB" />
-                    </div>
+                <label>ChildB</label>
+                <InputText class="form-control" @bind-Value="Question.ChildB" />
+            </div>
+            <div class="col-1">
+                <div class="col-form-label">
+                    <label>AnswerB</label>
+                    <InputSelect class="form-control" @bind-Value="Question.AnswerB">
+                        <option value="true">True</option>
+                        <option value="false">False</option>
+                    </InputSelect>
                 </div>
             </div>
-            <div class="col-6 text-center">
-                <div class="my-5 text-center text-xl-start form-group">
-                    <label for="bodyPreview">Explanation B Preview</label>
-                    <div id="bodyPreview" style="height: 100%;" class="form-control">
-                        @((MarkupString)Markdown.ToHtml(Question.ExplanationB == null ? " " : Question.ExplanationB))
+            <div class="col-5">
+                <div class="text-center text-xl-start">
+                    <div class="col-form-label">
+                        <label>Explanation B (As Markdown)</label>
+                        <MarkdownTextInput class="form-control" @bind-Value="Question.ExplanationB" />
                     </div>
                 </div>
             </div>
@@ -99,62 +93,51 @@ else
 
         <hr/>
         <!--Child C-->
-        <div class="col-form-label">
-            <label>ChildC</label>
-            <InputText class="form-control" @bind-Value="Question.ChildC" />
-        </div>
-        <div class="col-form-label">
-            <label>AnswerC</label>
-            <InputSelect class="form-control" @bind-Value="Question.AnswerC">
-                <option value="true">True</option>
-                <option value="false">False</option>
-            </InputSelect>
-        </div>
-        <div class="col-form-label">
+        <div class="row">
             <div class="col-6">
-                <div class="text-center text-xl-start">
-                    <div class="col-form-label">
-                        <label>Explanation C</label>
-                        <MarkdownTextInput class="form-control" @bind-Value="Question.ExplanationC" />
-                    </div>
+                <label>ChildC</label>
+                <InputText class="form-control" @bind-Value="Question.ChildC" />
+            </div>
+            <div class="col-1">
+                <div class="col-form-label">
+                    <label>AnswerC</label>
+                    <InputSelect class="form-control" @bind-Value="Question.AnswerC">
+                        <option value="true">True</option>
+                        <option value="false">False</option>
+                    </InputSelect>
                 </div>
             </div>
-            <div class="col-6 text-center">
-                <div class="my-5 text-center text-xl-start form-group">
-                    <label for="bodyPreview">Explanation C Preview</label>
-                    <div id="bodyPreview" style="height: 100%;" class="form-control">
-                        @((MarkupString)Markdown.ToHtml(Question.ExplanationC == null ? " " : Question.ExplanationC))
+            <div class="col-5">
+                <div class="text-center text-xl-start">
+                    <div class="col-form-label">
+                        <label>Explanation C (As Markdown)</label>
+                        <MarkdownTextInput class="form-control" @bind-Value="Question.ExplanationC" />
                     </div>
                 </div>
             </div>
         </div>
 
-        <hr /> <!--Child D-->
-        <div class="col-form-label">
-            <label>ChildD</label>
-            <InputText class="form-control" @bind-Value="Question.ChildD" />
-        </div>
-        <div class="col-form-label">
-            <label>AnswerD</label>
-            <InputSelect class="form-control" @bind-Value="Question.AnswerD">
-                <option value="true">True</option>
-                <option value="false">False</option>
-            </InputSelect>
-        </div>
-        <div class="col-form-label">
+        <hr />
+        <!--Child D-->
+        <div class="row">
             <div class="col-6">
-                <div class="text-center text-xl-start">
-                    <div class="col-form-label">
-                        <label>Explanation D</label>
-                        <MarkdownTextInput class="form-control" @bind-Value="Question.ExplanationD" />
-                    </div>
+                <label>ChildD</label>
+                <InputText class="form-control" @bind-Value="Question.ChildD" />
+            </div>
+            <div class="col-1">
+                <div class="col-form-label">
+                    <label>AnswerD</label>
+                    <InputSelect class="form-control" @bind-Value="Question.AnswerD">
+                        <option value="true">True</option>
+                        <option value="false">False</option>
+                    </InputSelect>
                 </div>
             </div>
-            <div class="col-6 text-center">
-                <div class="my-5 text-center text-xl-start form-group">
-                    <label for="bodyPreview">Explanation D Preview</label>
-                    <div id="bodyPreview" style="height: 100%;" class="form-control">
-                        @((MarkupString)Markdown.ToHtml(Question.ExplanationD == null ? " " : Question.ExplanationD))
+            <div class="col-5">
+                <div class="text-center text-xl-start">
+                    <div class="col-form-label">
+                        <label>Explanation D (As Markdown)</label>
+                        <MarkdownTextInput class="form-control" @bind-Value="Question.ExplanationD" />
                     </div>
                 </div>
             </div>
@@ -162,31 +145,25 @@ else
 
         <hr />
         <!--Child E-->
-        <div class="col-form-label">
-            <label>ChildE</label>
-            <InputText class="form-control" @bind-Value="Question.ChildE" />
-        </div>
-        <div class="col-form-label">
-            <label>AnswerE</label>
-            <InputSelect class="form-control" @bind-Value="Question.AnswerE">
-                <option value="true">True</option>
-                <option value="false">False</option>
-            </InputSelect>
-        </div>
-        <div class="col-form-label">
+        <div class="row">
             <div class="col-6">
-                <div class="text-center text-xl-start">
-                    <div class="col-form-label">
-                        <label>Explanation E</label>
-                        <MarkdownTextInput class="form-control" @bind-Value="@Question.ExplanationE" />
-                    </div>
+                <label>ChildE</label>
+                <InputText class="form-control" @bind-Value="Question.ChildE" />
+            </div>
+            <div class="col-1">
+                <div class="col-form-label">
+                    <label>AnswerE</label>
+                    <InputSelect class="form-control" @bind-Value="Question.AnswerE">
+                        <option value="true">True</option>
+                        <option value="false">False</option>
+                    </InputSelect>
                 </div>
             </div>
-            <div class="col-6 text-center">
-                <div class="my-5 text-center text-xl-start form-group">
-                    <label for="bodyPreview">Explanation E Preview</label>
-                    <div id="bodyPreview" style="height: 100%;" class="form-control">
-                        @((MarkupString)Markdown.ToHtml(Question.ExplanationE == null ? " " : Question.ExplanationE))
+            <div class="col-5">
+                <div class="text-center text-xl-start">
+                    <div class="col-form-label">
+                        <label>Explanation E (As Markdown)</label>
+                        <MarkdownTextInput class="form-control" @bind-Value="Question.ExplanationE" />
                     </div>
                 </div>
             </div>
